docs: update dcos

--- a/src/docs/guides/general/advanced/custom-model.en-US.mdx
+++ b/src/docs/guides/general/advanced/custom-model.en-US.mdx
@@ -8,7 +8,7 @@ Univer allows users to persist/load data from custom plugins along with the `sna
 
 ## Create a CustomerService
 
-In `@univerjs/core`, there is an instance of `ResourceManagerService`. You can register the corresponding `hooks` in your `custom plugin` and bind the data to  `snapshot`.
+In `@univerjs/core`, there is an instance of `ResourceManagerService`. You can register the corresponding `hooks` in your `custom plugin` and bind the data to `snapshot`.
 
 ```typescript
 import { IResourceManagerService, OnLifecycle, LifecycleStages } from '@univerjs/core';
@@ -16,70 +16,81 @@ import { Inject } from '@wendellhu/redi';
 import { UniverType } from '@univerjs/protocol';
 
 const YOUR_PLUGIN_NAME = 'YOUR_PLUGIN_NAME';
+
 interface IResource { testResource: string }
+
 @OnLifecycle(LifecycleStages.Starting, CustomerService)
 class CustomerService {
-    private _model:IResource = { testResource: '' };
-    constructor(@Inject(IResourceManagerService) private _resourceManagerService: IResourceManagerService
-    ) {
-        this._resourceManagerService.registerPluginResource<IResource>({
-            toJson: (unitID) => this._toJson(unitID),
-            parseJson: (json) => this._parseJson(json),
-            pluginName: 'SHEET_CustomerService_PLUGIN',
-            businesses: [UniverType.UNIVER_SHEET, UniverType.UNIVER_DOC, UniverType.UNIVER_SLIDE],
-            onLoad: (_unitId, resource) => {
-                this._model = resource;
-            },
-            onUnLoad: (_unitId) => {
-                this._model = { testResource: '' };
-            },
-        });
-    }
+  private _model:IResource = { testResource: '' };
 
-    _toJson(_unitID: string) {
-        const model = this._model;
-        return JSON.stringify(model);
-    }
+  constructor(
+    @Inject(IResourceManagerService) private _resourceManagerService: IResourceManagerService
+  ) {
+    this._resourceManagerService.registerPluginResource<IResource>({
+      toJson: (unitID) => this._toJson(unitID),
+      parseJson: (json) => this._parseJson(json),
+      pluginName: 'SHEET_CustomerService_PLUGIN',
+      businesses: [UniverType.UNIVER_SHEET, UniverType.UNIVER_DOC, UniverType.UNIVER_SLIDE],
+      onLoad: (_unitId, resource) => {
+        this._model = resource;
+      },
+      onUnLoad: (_unitId) => {
+        this._model = { testResource: '' };
+      },
+    });
+  }
 
-    _parseJson(json: string) {
-        return JSON.parse(json);
-    }
+  _toJson(_unitID: string) {
+    const model = this._model;
+    return JSON.stringify(model);
+  }
+
+  _parseJson(json: string) {
+    return JSON.parse(json);
+  }
 }
 ```
+
 1. The type of `IResource` can be defined freely and supports any type.
 2. `toJson/parseJson` are a pair of serialization functions for `IResource`, typically using JSON functions. You can also add specific logic for compression/obfuscation here.
 3. Why does `toJson` function have the parameter unitID? This is because an instance of `Univer` may contain multiple instances of unit (such as `Sheet`/`Doc` and subsequent `Slider`). The same applies to `onLoad`/`onUnLoad`.
 4. The `businesses` option is used to determine when to load this resources based on the business being loaded. For example, if you are loading data for a `Sheet` module, there is no need to load it when `Doc` is being loaded
 
 ## Inject CustomerPlugin
+
 When your data has been connected to `ResourceManagerService`, inject your `CustomerService` into your own `CustomerPlugin`.
+
 ```typescript
 import {  Plugin } from '@univerjs/core';
 import { Inject, Injector } from '@wendellhu/redi';
 
 
 export class UniverSheetsNumfmtPlugin extends Plugin {
-    constructor(
-        @Inject(Injector) override readonly _injector: Injector
-    ) {
-        super();
-    }
+  constructor(
+    @Inject(Injector) override readonly _injector: Injector
+  ) {
+    super();
+  }
 
-    override onStarting(): void {
-        this._injector.add([CustomerService]);
-    }
+  override onStarting(): void {
+    this._injector.add([CustomerService]);
+  }
 }
 ```
 
 ## Register the plugin in Univer
+
 ```typescript
 const univer = new Univer();
 univer.registerPlugin(UniverSheetsNumfmtPlugin);
 // Performs additional initialization logic
 ```
+
 ## How to obtain a snapshot containing the `Resources`?
+
 There is a `ResourceLoaderService` instance in `@univerjs/core`, which you can use to save the latest `snapshot` information of a workbook or document using `saveWorkbook` or `saveDoc`. You can then use `univer.createUnit` to retrieve and display the data later.
 The information of `Resource` is stored on `snapshot.resources` and can be obtained based on the corresponding `pluginName`.
+
 ```typescript
 import { IResourceLoaderService, IUniverInstanceService, LifecycleStages, OnLifecycle } from '@univerjs/core';
 import { Inject } from '@wendellhu/redi';
@@ -87,13 +98,13 @@ import { UniverType } from '@univerjs/protocol';
 
 @OnLifecycle(LifecycleStages.Starting, CustomerService)
 class CustomerService {
-    constructor(
-        @Inject(IResourceLoaderService) private _resourceLoaderService: IResourceLoaderService,
-        @Inject(IUniverInstanceService) private _univerInstanceService: IUniverInstanceService
+  constructor(
+    @Inject(IResourceLoaderService) private _resourceLoaderService: IResourceLoaderService,
+    @Inject(IUniverInstanceService) private _univerInstanceService: IUniverInstanceService
 
-    ) {
-        const workbook = this._univerInstanceService.getCurrentUnitForType(UniverType.UNIVER_SHEET)!
-        const snapshot = this._resourceLoaderService.saveWorkbook(workbook);
-    }
+  ) {
+    const workbook = this._univerInstanceService.getCurrentUnitForType(UniverType.UNIVER_SHEET)!
+    const snapshot = this._resourceLoaderService.saveWorkbook(workbook);
+  }
 }
 ```
