--- a/src/docs/guides/general/architecture/collaborative-benchmark.zh-CN.mdx
+++ b/src/docs/guides/general/architecture/collaborative-benchmark.zh-CN.mdx
@@ -69,7 +69,7 @@ Univer 使用 OT（操作转换）作为协同冲突处理的方案。
   定义 “协同延迟”
 
   changeset 从发送到被第一个客户端应用的时间差。
-  协同延迟能有效地衡量 CS 的 transform, apply 的性能。
+  协同延迟能有效地衡量 CS 的 transform，apply 的性能。
 </Callout>
 
 在当前协同引擎模型下，影响协同延迟的直接因素为 CS 的处理数量，不妨称为
@@ -127,7 +127,7 @@ Univer 使用 OT（操作转换）作为协同冲突处理的方案。
 
 ## 下一步
 
-本实验重点关注协同引擎外部的观测数据，如协同延迟和协同人数，然而当协同人数逐渐增多时，协同延迟出现较大幅度增长。分析其原因，需要增加更多的内部视角：如，随着人数增加，与 transform, apply 的处理延迟之间的关系；
+本实验重点关注协同引擎外部的观测数据，如协同延迟和协同人数，然而当协同人数逐渐增多时，协同延迟出现较大幅度增长。分析其原因，需要增加更多的内部视角：如，随着人数增加，与 transform、apply 的处理延迟之间的关系；
 
 此外，随着人数增加，网络吞吐量将成为一个关键因素。我们需要研究编辑人数、网络吞吐量和延迟之间的关系。
 
