--- a/src/docs/guides/general/architecture/rendering.en-US.mdx
+++ b/src/docs/guides/general/architecture/rendering.en-US.mdx
@@ -53,7 +53,7 @@ const SpreadsheetLeftTopPlaceholder = new Rect(SHEET_VIEW_KEY.LEFT_TOP, {
   strokeWidth: 1,
 });
 
-scene.addObjects([spreadsheet, spreadsheetRowHeader, spreadsheetColumnHeader, SpreadsheetLeftTopPlaceholder],
+scene.addObjects([spreadsheet, spreadsheetRowHeader, spreadsheetColumnHeader, SpreadsheetLeftTopPlaceholder])
 ```
 
 It is allowed to directly add events to the Scene, just like adding a global event to the document in DOM.
