--- a/src/docs/guides/general/advanced/custom-model.zh-CN.mdx
+++ b/src/docs/guides/general/advanced/custom-model.zh-CN.mdx
@@ -4,145 +4,105 @@ import BadgeGroup, { UniverTypes } from '@/components/BadgeGroup'
 
 <BadgeGroup values={[UniverTypes.GENERAL]} value={UniverTypes.GENERAL} />
 
-Univer 允许用户自定义插件需要存储在文档快照上的模型。
+Univer 允许用户将自定义插件中的数据跟随 `snapshot` 一起落盘或加载。
 
-![image](./custom-model/resource.jpg)
+## 创建一个 CustomerService
 
-在 `@univerjs/core` 中存在一个 `ResourceManagerService` 实例,你可以在自己新建的 plugin 中注册对应的 `hook` ,将数据绑定到 `snapshot` 上.
+在 `@univerjs/core` 中存在一个 `ResourceManagerService` 实例，你可以在自己新建的 plugin 中注册对应的 `hook`，将数据绑定到 `snapshot` 上。
 
 ```typescript
-import { IResourceManagerService } from '@univerjs/core'
-import { Inject } from '@wendellhu/redi'
+import { IResourceManagerService, OnLifecycle, LifecycleStages } from '@univerjs/core';
+import { Inject } from '@wendellhu/redi';
+import { UniverType } from '@univerjs/protocol';
 
-const YOUR_PLUGIN_NAME = 'YOUR_PLUGIN_NAME'
-interface Resource { testResource: string }
+const YOUR_PLUGIN_NAME = 'YOUR_PLUGIN_NAME';
+
+interface IResource { testResource: string }
+
+@OnLifecycle(LifecycleStages.Starting, CustomerService)
+class CustomerService {
+  private _model:IResource = { testResource: '' };
+
+  constructor(
+    @Inject(IResourceManagerService) private _resourceManagerService: IResourceManagerService
+  ) {
+    this._resourceManagerService.registerPluginResource<IResource>({
+      toJson: (unitID) => this._toJson(unitID),
+      parseJson: (json) => this._parseJson(json),
+      pluginName: 'SHEET_CustomerService_PLUGIN',
+      businesses: [UniverType.UNIVER_SHEET, UniverType.UNIVER_DOC, UniverType.UNIVER_SLIDE],
+      onLoad: (_unitId, resource) => {
+        this._model = resource;
+      },
+      onUnLoad: (_unitId) => {
+        this._model = { testResource: '' };
+      },
+    });
+  }
+
+  _toJson(_unitID: string) {
+    const model = this._model;
+    return JSON.stringify(model);
+  }
+
+  _parseJson(json: string) {
+    return JSON.parse(json);
+  }
+}
+```
+
+1. `IResource` 的类型可以自己随意定义，支持任何类型。
+2. `toJson/parseJson` 是一对针对 IResource 的序列化函数，通常使用 JSON 函数，这里你也可以可以加入压缩/混淆的特定逻辑。
+3. `toJson` 的函数参数为什么会有 `unitID`? 这是因为 一个 `Univer` 实例可能会包含多个 `unit` 实例（例如 `Sheet`/`Doc` 以及后续的 `Slider`），`onLoad`/`onUnLoad` 同理。
+4. `businesses` 这个选项，是当什么业务加载的时候，才需要加载 `resources`，如果你是一个 `Sheet` 模块的数据，在 `Doc` 加载的时候，就没必要加载了。
+
+## 注入 CustomerPlugin
+
+当你的数据已经接入 `ResourceManagerService` 后，将你的 `CustomerService` 在你自己的 `CustomerPlugin` 中注入
+
+```typescript
+import {  Plugin } from '@univerjs/core';
+import { Inject, Injector } from '@wendellhu/redi';
+
+export class UniverSheetsNumfmtPlugin extends Plugin {
+  constructor(
+    @Inject(Injector) override readonly _injector: Injector
+  ) {
+    super();
+  }
+
+  override onStarting(): void {
+    this._injector.add([CustomerService]);
+  }
+}
+```
+
+## 将插件注册进 Univer
+```typescript
+const univer = new Univer();
+univer.registerPlugin(UniverSheetsNumfmtPlugin);
+// 执行其他的初始化逻辑
+```
+
+## 如何获得包含`Resources`资源的快照
+
+在 `@univerjs/core` 中存在一个 `ResourceLoaderService` 实例，你可以通过该 `Service` 的 `saveWorkbook` 或者 `saveDoc` 的最新快照信息 `Snapshot`，后续再通过 `univer.createUnit` 来回显数据。
+其中 `Resource` 信息存储在 `snapshot.resources` 上，可根据对应的 `pluginName` 去获取。
+
+```typescript
+import { IResourceLoaderService, IUniverInstanceService, LifecycleStages, OnLifecycle } from '@univerjs/core';
+import { Inject } from '@wendellhu/redi';
+import { UniverType } from '@univerjs/protocol';
+
+@OnLifecycle(LifecycleStages.Starting, CustomerService)
 class CustomerService {
   constructor(
-    @Inject(IResourceManagerService)
-    _resourceManagerService: IResourceManagerService
+    @Inject(IResourceLoaderService) private _resourceLoaderService: IResourceLoaderService,
+    @Inject(IUniverInstanceService) private _univerInstanceService: IUniverInstanceService
+
   ) {
-    this._resourceManagerService.registerPluginResource<Resource>(
-      unitID,
-      YOUR_PLUGIN_NAME,
-      {
-        toJson: unitID => this._toJson(unitID),
-        parseJson: json => this._parseJson(json),
-        onChange: (unitId: string, resource: Resource) => {
-          this.model = resource
-        },
-      }
-    )
-  }
-
-  _toJson(unitID: string) {
-    // 将你需要存储的数据转为 json 字符串存储。
-    const model = this.getModel(unitID)
-    return JSON.stringify(model)
-  }
-
-  parseJson(json: string) {
-    // 将 json 字符串数据反序列化为对象。
-    return JSON.parse(json)
+    const workbook = this._univerInstanceService.getCurrentUnitForType(UniverType.UNIVER_SHEET)!
+    const snapshot = this._resourceLoaderService.saveWorkbook(workbook);
   }
 }
 ```
-
-当你的数据已经接入 `ResourceManagerService` 后,将根据你后续选择的持久化方式进行落盘处理.这里根据落盘的方式差异有 2 种快照方案.
-
-## 本地化快照方案
-
-在以上注册逻辑生效后,需要执行初始化/落盘两步的操作,可以模拟以下 service 实现.
-
-```typescript
-import type { ISnapshotPersistenceService, Workbook } from '@univerjs/core'
-import {
-  Disposable,
-  IResourceManagerService,
-  IUniverInstanceService,
-} from '@univerjs/core'
-import { Inject } from '@wendellhu/redi'
-
-export class LocalSnapshotService
-  extends Disposable
-  implements ISnapshotPersistenceService {
-  constructor(
-    @Inject(IResourceManagerService)
-    private _resourceManagerService: IResourceManagerService,
-    @Inject(IUniverInstanceService)
-    private _univerInstanceService: IUniverInstanceService
-  ) {
-    super()
-    this._initWorkBook()
-  }
-
-  private _initWorkBook() {
-    this._univerInstanceService.sheetAdded$.subscribe(workbook =>
-      this._initWorkbookFromSnapshot(workbook)
-    )
-    const workbooks = this._univerInstanceService.getAllUniverSheetsInstance()
-    workbooks.forEach((workbook) => {
-      this._initWorkbookFromSnapshot(workbook)
-    })
-  }
-
-  private _initWorkbookFromSnapshot(workbook: Workbook) {
-    const unitId = workbook.getUnitId()
-    const snapshot = workbook.getSnapshot()
-    const resources = this._resourceManagerService.getAllResource(unitId)
-    resources.forEach((resource) => {
-      const resourceSnapshot = (snapshot.resources || []).find(
-        item => item.name === resource.resourceName
-      )
-      if (resourceSnapshot) {
-        const model = resource.hook.parseJson(resourceSnapshot.data)
-        resource.hook.onChange(unitId, model)
-      }
-    })
-  }
-
-  saveWorkbook(workbook: Workbook) {
-    const snapshot = { ...workbook.getSnapshot() }
-    const unitId = workbook.getUnitId()
-    const resourceHooks = this._resourceManagerService.getAllResource(
-      workbook.getUnitId()
-    )
-    const resources = resourceHooks.map((resourceHook) => {
-      const data = resourceHook.hook.toJson(unitId)
-      return {
-        name: resourceHook.resourceName,
-        data,
-      }
-    })
-    snapshot.resources = resources
-    return snapshot
-  }
-}
-```
-
-具体实现可参考 [本地如何保存插件快照](https://github.com/dream-num/univer/blob/dev/examples/src/plugins/local-save/services/local-snapshot.service.ts)
-
-### 获取当前资源快照
-
-如果你已经有一个保存完好的快照需要初始化，此时会在 `_initWorkbookFromSnapshot` 函数中，完成数据的初始化，通过注册的 `hook` ，调用 onchange 通知自定义插件执行自己的初始化逻辑.
-
-### 保存快照
-
-通过 DI 拿到 `LocalSnapshotService` 实例后,调用 `LocalSnapshotService.saveWorkbook` 方法，可以获得一个序列化的 json 对象.
-
-## 远端快照方案
-
-具体文档等协同方案公布后同步。
-
-## 模型引用化
-
-将重复的字符串使用一个短码进行映射，以减少内存/带宽开销。
-
-### 运行时引用化
-
-运行时引用化，主要是为来缩减运行时的内存开销。
-
-具体实现可以参考 [数据格式如何做引用化](https://github.com/dream-num/univer/blob/dev/packages/sheets/src/services/numfmt/numfmt.service.ts)
-
-### 传输时引用化
-
-具体文档等协同方案公布后同步。
