--- a/src/docs/guides/sheet/features/permission.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/permission.zh-CN.mdx
@@ -21,7 +21,7 @@ const univerAPI = FUniver.newAPI(univer);
 然后你就可以通过调用 `univerAPI` 的方法来使用 Univer 了，设置整体工作簿不可编辑：
 
 ```typescript
-univerAPI.setWorkbookEditable(false);
+univerAPI.setEditable(false);
 ```
 
 ### 工作表权限代码示例
@@ -116,7 +116,7 @@ class YourService {
     this._permissionService.updatePermissionPoint(new WorkbookEditablePermission('unitId').id, false);
   }
 
-  setWorkbookEditable() {
+  setEditable() {
     this._permissionService.updatePermissionPoint(new WorkbookEditablePermission('unitId').id, true);
   }
 }
