docs: change permission api

--- a/src/docs/guides/sheet/features/permission.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/permission.zh-CN.mdx
@@ -116,7 +116,7 @@ class YourService {
     this._permissionService.updatePermissionPoint(new WorkbookEditablePermission('unitId').id, false);
   }
 
-  setEditable() {
+  setWorkbookEditable() {
     this._permissionService.updatePermissionPoint(new WorkbookEditablePermission('unitId').id, true);
   }
 }
