--- a/src/docs/guides/sheet/features/core.en-US.mdx
+++ b/src/docs/guides/sheet/features/core.en-US.mdx
@@ -125,6 +125,10 @@ univer.registerPlugin(UniverUIPlugin, {
   header?: boolean;
   footer?: boolean;
   contextMenu?: boolean;
+
+  disableAutoFocus?: boolean;
+  override?: DependencyOverride;
+  menu?: MenuConfig;
 });
 ```
 
@@ -133,3 +137,6 @@ univer.registerPlugin(UniverUIPlugin, {
 * `toolbar` - Whether to display the header toolbar.  <VersionBadge version="0.2.0+" />
 * `footer` - Whether to display the footer.
 * `contextMenu` - Whether to display the right-click menu.
+* `disableAutoFocus` - Whether to disable auto-focus.
+* `override` - Dependency injection override configuration.
+* `menu` - Menu configuration, see [Customize menu items (hide menu items)](https://univer.ai/zh-CN/guides/sheet/advanced/custom-ui#customizing-menu-items-hiding-menu-items)
