--- a/src/docs/guides/sheet/features/core.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/core.zh-CN.mdx
@@ -125,6 +125,10 @@ univer.registerPlugin(UniverUIPlugin, {
   header?: boolean;
   footer?: boolean;
   contextMenu?: boolean;
+
+  disableAutoFocus?: boolean;
+  override?: DependencyOverride;
+  menu?: MenuConfig;
 });
 ```
 
@@ -133,3 +137,6 @@ univer.registerPlugin(UniverUIPlugin, {
 * `toolbar` - 是否显示头部工具栏。 <VersionBadge version="0.2.0+" />
 * `footer` - 是否显示底部。
 * `contextMenu` - 是否显示右键菜单。
+* `disableAutoFocus` - 是否禁用自动聚焦。
+* `override` - 依赖注入的覆盖配置。
+* `menu` - 菜单配置，详见[定制菜单项（隐藏菜单项）](https://univer.ai/zh-CN/guides/sheet/advanced/custom-ui#定制菜单项隐藏菜单项)
