docs: update docs

--- a/src/docs/guides/sheet/features/core.en-US.mdx
+++ b/src/docs/guides/sheet/features/core.en-US.mdx
@@ -126,7 +126,7 @@ univer.registerPlugin(UniverUIPlugin, {
   footer?: boolean;
   contextMenu?: boolean;
 
-  disableAutoFocus?: boolean;
+  disableAutoFocus?: true;
   override?: DependencyOverride;
   menu?: MenuConfig;
 });
