--- a/src/docs/guides/sheet/features/core.zh-CN.mdx
+++ b/src/docs/guides/sheet/features/core.zh-CN.mdx
@@ -126,7 +126,7 @@ univer.registerPlugin(UniverUIPlugin, {
   footer?: boolean;
   contextMenu?: boolean;
 
-  disableAutoFocus?: boolean;
+  disableAutoFocus?: true;
   override?: DependencyOverride;
   menu?: MenuConfig;
 });
